rename known meteofrance variables to plain text

--- a/mymeteofrance/demo/mymeteofrance.ipynb
+++ b/mymeteofrance/demo/mymeteofrance.ipynb
@@ -322,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATE\tRR\n",
+      "Date\tPluie\n",
       "2021-01-01\t15.3\n",
       "2021-01-02\t8.9\n",
       "2021-01-03\t8.4\n",
@@ -350,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATE\tETPMON\n",
+      "Date\tETP\n",
       "2021-01-01\t0.8\n",
       "2021-01-02\t1.6\n",
       "2021-01-03\t0.9\n",
@@ -378,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATE\tTM\n",
+      "Date\tTemperature\n",
       "2021-01-01\t8.5\n",
       "2021-01-02\t9.9\n",
       "2021-01-03\t6.9\n",
