add parameter to control which period to use for visualisation/performance

--- a/mygardenia/demo/mygardenia.ipynb
+++ b/mygardenia/demo/mygardenia.ipynb
@@ -19,8 +19,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:36.602383300Z",
-     "start_time": "2024-01-11T09:04:36.590659600Z"
+     "end_time": "2024-01-12T10:52:17.571582300Z",
+     "start_time": "2024-01-12T10:52:17.552354500Z"
     }
    },
    "id": "b10709568fe986f9",
@@ -35,8 +35,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:36.633194500Z",
-     "start_time": "2024-01-11T09:04:36.605466600Z"
+     "end_time": "2024-01-12T10:52:17.585067100Z",
+     "start_time": "2024-01-12T10:52:17.570536500Z"
     }
    },
    "id": "initial_id",
@@ -103,8 +103,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:36.633194500Z",
-     "start_time": "2024-01-11T09:04:36.619185100Z"
+     "end_time": "2024-01-12T10:52:17.603280600Z",
+     "start_time": "2024-01-12T10:52:17.587141Z"
     }
    },
    "id": "f46bbac24560ec65",
@@ -122,8 +122,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:36.667736Z",
-     "start_time": "2024-01-11T09:04:36.634241400Z"
+     "end_time": "2024-01-12T10:52:17.635236600Z",
+     "start_time": "2024-01-12T10:52:17.603280600Z"
     }
    },
    "id": "77c5eb1116696031",
@@ -148,8 +148,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:36.678472500Z",
-     "start_time": "2024-01-11T09:04:36.665651700Z"
+     "end_time": "2024-01-12T10:52:17.647385300Z",
+     "start_time": "2024-01-12T10:52:17.634186300Z"
     }
    },
    "id": "e671d11887761ddd",
@@ -229,8 +229,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:36.705685400Z",
-     "start_time": "2024-01-11T09:04:36.681626800Z"
+     "end_time": "2024-01-12T10:52:17.676645800Z",
+     "start_time": "2024-01-12T10:52:17.649478800Z"
     }
    },
    "id": "940c8d5607f53e63",
@@ -448,8 +448,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:36.711959200Z",
-     "start_time": "2024-01-11T09:04:36.706730400Z"
+     "end_time": "2024-01-12T10:52:17.681928700Z",
+     "start_time": "2024-01-12T10:52:17.672261Z"
     }
    },
    "id": "71f460204daa62a",
@@ -474,8 +474,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:37.398904400Z",
-     "start_time": "2024-01-11T09:04:36.712996800Z"
+     "end_time": "2024-01-12T10:52:18.237868Z",
+     "start_time": "2024-01-12T10:52:17.679800500Z"
     }
    },
    "id": "d5df305e0d0fda3",
@@ -521,8 +521,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:37.415072900Z",
-     "start_time": "2024-01-11T09:04:37.401990300Z"
+     "end_time": "2024-01-12T10:52:18.252157300Z",
+     "start_time": "2024-01-12T10:52:18.237868Z"
     }
    },
    "id": "2b4537fed68af1f1",
@@ -537,8 +537,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:37.443632400Z",
-     "start_time": "2024-01-11T09:04:37.416112300Z"
+     "end_time": "2024-01-12T10:52:18.272331600Z",
+     "start_time": "2024-01-12T10:52:18.252157300Z"
     }
    },
    "id": "5026abaae9f09d05",
@@ -599,8 +599,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:37.449957600Z",
-     "start_time": "2024-01-11T09:04:37.432304900Z"
+     "end_time": "2024-01-12T10:52:18.284116100Z",
+     "start_time": "2024-01-12T10:52:18.267983200Z"
     }
    },
    "id": "e029f97c34d6f77c",
@@ -615,8 +615,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:38.268016200Z",
-     "start_time": "2024-01-11T09:04:37.448913300Z"
+     "end_time": "2024-01-12T10:52:19.120916100Z",
+     "start_time": "2024-01-12T10:52:18.284116100Z"
     }
    },
    "id": "2743f3752cc4bc8f",
@@ -641,7 +641,7 @@
      "text": [
       "Help on method visualise in module mygardenia.simulate:\n",
       "\n",
-      "visualise(variable: str, filename: str = None, fig_size: tuple = None) method of mygardenia.simulate.GardeniaModel instance\n",
+      "visualise(variable: str, period: str = None, filename: str = None, fig_size: tuple = None) method of mygardenia.simulate.GardeniaModel instance\n",
       "    Visualise the simulations and the observations time series\n",
       "    for a given variable.\n",
       "    \n",
@@ -650,6 +650,14 @@
       "        variable: `str`\n",
       "            The model variable to evaluate. It can either be\n",
       "            'streamflow' or 'piezo_level'.\n",
+      "    \n",
+      "        period: `str`, optional\n",
+      "            The period to consider for the computation of the evaluation\n",
+      "            metric. It can either be 'calib' (only the period used for\n",
+      "            calibration is considered, excluding the initialisation\n",
+      "            period) or 'eval' (only the tail period left aside and not\n",
+      "            used for the calibration is considered). If not provided,\n",
+      "            set to default value 'calib'.\n",
       "    \n",
       "        filename: `str`, optional\n",
       "            The file name to use for storing the visualisation. The\n",
@@ -684,8 +692,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:38.283981300Z",
-     "start_time": "2024-01-11T09:04:38.269078600Z"
+     "end_time": "2024-01-12T10:52:19.135556300Z",
+     "start_time": "2024-01-12T10:52:19.123032600Z"
     }
    },
    "id": "92017d4e554a0ed5",
@@ -709,8 +717,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:38.530621100Z",
-     "start_time": "2024-01-11T09:04:38.285048200Z"
+     "end_time": "2024-01-12T10:52:19.376748200Z",
+     "start_time": "2024-01-12T10:52:19.137617800Z"
     }
    },
    "id": "6c878c8ed1b0e2cb",
@@ -734,8 +742,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:38.670250500Z",
-     "start_time": "2024-01-11T09:04:38.533956Z"
+     "end_time": "2024-01-12T10:52:19.517708600Z",
+     "start_time": "2024-01-12T10:52:19.378804200Z"
     }
    },
    "id": "de57465ccaa6f25c",
@@ -760,7 +768,7 @@
      "text": [
       "Help on method evaluate in module mygardenia.simulate:\n",
       "\n",
-      "evaluate(variable: str, metric: str, transform: str = None, exponent: float = None) method of mygardenia.simulate.GardeniaModel instance\n",
+      "evaluate(variable: str, metric: str, period: str = None, transform: str = None, exponent: float = None) method of mygardenia.simulate.GardeniaModel instance\n",
       "    Evaluate the performance between the simulations and the\n",
       "    observations for a given variable.\n",
       "    \n",
@@ -774,6 +782,14 @@
       "            The evaluation metric to use to compare observations and\n",
       "            simulations. It can be any metric available in `evalhyd`\n",
       "            (https://hydrogr.github.io/evalhyd/metrics/deterministic.html)\n",
+      "    \n",
+      "        period: `str`, optional\n",
+      "            The period to consider for the computation of the evaluation\n",
+      "            metric. It can either be 'calib' (only the period used for\n",
+      "            calibration is considered, excluding the initialisation\n",
+      "            period) or 'eval' (only the tail period left aside and not\n",
+      "            used for the calibration is considered). If not provided,\n",
+      "            set to default value 'calib'.\n",
       "    \n",
       "        transform: `str`, optional\n",
       "            The transformation function to apply to the observations\n",
@@ -811,8 +827,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:38.713017Z",
-     "start_time": "2024-01-11T09:04:38.671356700Z"
+     "end_time": "2024-01-12T10:52:19.574441400Z",
+     "start_time": "2024-01-12T10:52:19.518777100Z"
     }
    },
    "id": "284249bcc80a9fe",
@@ -836,8 +852,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:38.713017Z",
-     "start_time": "2024-01-11T09:04:38.687402800Z"
+     "end_time": "2024-01-12T10:52:19.574441400Z",
+     "start_time": "2024-01-12T10:52:19.533599900Z"
     }
    },
    "id": "d85fc46f71dd5258",
@@ -861,8 +877,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-11T09:04:38.737715900Z",
-     "start_time": "2024-01-11T09:04:38.703435800Z"
+     "end_time": "2024-01-12T10:52:19.594299300Z",
+     "start_time": "2024-01-12T10:52:19.550286900Z"
     }
    },
    "id": "cb0ee2feac372351",
