add support for legacy RGA and GAR files to configure Tree/Model

--- a/mygardenia/demo/mygardenia.ipynb
+++ b/mygardenia/demo/mygardenia.ipynb
@@ -19,8 +19,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:17.571582300Z",
-     "start_time": "2024-01-12T10:52:17.552354500Z"
+     "end_time": "2024-01-16T08:17:00.769257200Z",
+     "start_time": "2024-01-16T08:17:00.749230700Z"
     }
    },
    "id": "b10709568fe986f9",
@@ -35,8 +35,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:17.585067100Z",
-     "start_time": "2024-01-12T10:52:17.570536500Z"
+     "end_time": "2024-01-16T08:17:00.780669500Z",
+     "start_time": "2024-01-16T08:17:00.765977900Z"
     }
    },
    "id": "initial_id",
@@ -45,7 +45,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Either via the use of TOML files"
+    "## Either via the use of TOML files (option 1)"
    ],
    "metadata": {
     "collapsed": false
@@ -103,8 +103,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:17.603280600Z",
-     "start_time": "2024-01-12T10:52:17.587141Z"
+     "end_time": "2024-01-16T08:17:00.794759700Z",
+     "start_time": "2024-01-16T08:17:00.781700700Z"
     }
    },
    "id": "f46bbac24560ec65",
@@ -122,8 +122,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:17.635236600Z",
-     "start_time": "2024-01-12T10:52:17.603280600Z"
+     "end_time": "2024-01-16T08:17:00.826017400Z",
+     "start_time": "2024-01-16T08:17:00.795830700Z"
     }
    },
    "id": "77c5eb1116696031",
@@ -132,7 +132,86 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Or via a nested dictionary"
+    "## Or via the use of RGA and GAR files (option 2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "61606424c7f0d5ee"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method from_rga_gar in module mygardenia.configure:\n",
+      "\n",
+      "from_rga_gar(rga: str, gar: str) method of abc.ABCMeta instance\n",
+      "    Initialise a configuration tree from the RGA and GAR files\n",
+      "    of Gardenia v8.8.\n",
+      "    \n",
+      "    :Parameters:\n",
+      "    \n",
+      "        rga: `str`, optional\n",
+      "            The path to the RGA file containing the information about\n",
+      "            the simulation data for the catchment to simulate.\n",
+      "    \n",
+      "        gar: `str`, optional\n",
+      "            The path to the GAR file containing the settings and\n",
+      "            the parameters configuring the simulation with the\n",
+      "            Gardenia model.\n",
+      "    \n",
+      "    :Returns:\n",
+      "    \n",
+      "        `GardeniaTree`\n",
+      "    \n",
+      "    **Examples**\n",
+      "    \n",
+      "    >>> t = GardeniaTree.from_rga_gar(\n",
+      "    ...     rga='examples/my-example/config/exemple.rga',\n",
+      "    ...     gar='examples/my-example/config/exemple.gar'\n",
+      "    ... )\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(mygardenia.configure.GardeniaTree.from_rga_gar)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-16T08:17:00.841420100Z",
+     "start_time": "2024-01-16T08:17:00.828162300Z"
+    }
+   },
+   "id": "2709774143ede742",
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "tree = mygardenia.configure.GardeniaTree.from_rga_gar(\n",
+    "    rga=f'{working_dir}/config/exemple.rga',\n",
+    "    gar=f'{working_dir}/config/exemple.gar',\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-16T08:17:00.870545Z",
+     "start_time": "2024-01-16T08:17:00.844651800Z"
+    }
+   },
+   "id": "ce30a2bf8968bf6e",
+   "execution_count": 6
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Or via the use of a nested dictionary (option 3)"
    ],
    "metadata": {
     "collapsed": false
@@ -148,12 +227,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:17.647385300Z",
-     "start_time": "2024-01-12T10:52:17.634186300Z"
+     "end_time": "2024-01-16T08:17:00.876818500Z",
+     "start_time": "2024-01-16T08:17:00.858219400Z"
     }
    },
    "id": "e671d11887761ddd",
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -229,12 +308,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:17.676645800Z",
-     "start_time": "2024-01-12T10:52:17.649478800Z"
+     "end_time": "2024-01-16T08:17:00.897844Z",
+     "start_time": "2024-01-16T08:17:00.874690700Z"
     }
    },
    "id": "940c8d5607f53e63",
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -448,12 +527,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:17.681928700Z",
-     "start_time": "2024-01-12T10:52:17.672261Z"
+     "end_time": "2024-01-16T08:17:00.904813200Z",
+     "start_time": "2024-01-16T08:17:00.890231400Z"
     }
    },
    "id": "71f460204daa62a",
-   "execution_count": 7
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -474,12 +553,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:18.237868Z",
-     "start_time": "2024-01-12T10:52:17.679800500Z"
+     "end_time": "2024-01-16T08:17:01.431217800Z",
+     "start_time": "2024-01-16T08:17:00.905846800Z"
     }
    },
    "id": "d5df305e0d0fda3",
-   "execution_count": 8
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -521,12 +600,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:18.252157300Z",
-     "start_time": "2024-01-12T10:52:18.237868Z"
+     "end_time": "2024-01-16T08:17:01.447910500Z",
+     "start_time": "2024-01-16T08:17:01.433301300Z"
     }
    },
    "id": "2b4537fed68af1f1",
-   "execution_count": 9
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -537,12 +616,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:18.272331600Z",
-     "start_time": "2024-01-12T10:52:18.252157300Z"
+     "end_time": "2024-01-16T08:17:01.472333900Z",
+     "start_time": "2024-01-16T08:17:01.448947Z"
     }
    },
    "id": "5026abaae9f09d05",
-   "execution_count": 10
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -599,12 +678,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:18.284116100Z",
-     "start_time": "2024-01-12T10:52:18.267983200Z"
+     "end_time": "2024-01-16T08:17:01.481173600Z",
+     "start_time": "2024-01-16T08:17:01.465453400Z"
     }
    },
    "id": "e029f97c34d6f77c",
-   "execution_count": 11
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -615,12 +694,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:19.120916100Z",
-     "start_time": "2024-01-12T10:52:18.284116100Z"
+     "end_time": "2024-01-16T08:17:02.331187800Z",
+     "start_time": "2024-01-16T08:17:01.481787400Z"
     }
    },
    "id": "2743f3752cc4bc8f",
-   "execution_count": 12
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -641,7 +720,7 @@
      "text": [
       "Help on method visualise in module mygardenia.simulate:\n",
       "\n",
-      "visualise(variable: str, period: str = None, filename: str = None, fig_size: tuple = None) method of mygardenia.simulate.GardeniaModel instance\n",
+      "visualise(variable: str, period: str = None, filename: str = None, fig_size: tuple = None, return_fig: bool = False) method of mygardenia.simulate.GardeniaModel instance\n",
       "    Visualise the simulations and the observations time series\n",
       "    for a given variable.\n",
       "    \n",
@@ -669,9 +748,15 @@
       "            The width and the height of the figure as a tuple.\n",
       "            If not provided, set to (10, 4).\n",
       "    \n",
+      "        return_fig: `bool`, optional\n",
+      "            Whether to return the figure object used to generate the\n",
+      "            plot. If not provided, it is not returned.\n",
+      "    \n",
       "    :Returns:\n",
       "    \n",
-      "        `None`\n",
+      "        `None` or `matplotlib.figure.Figure`\n",
+      "            The figure used to create the plot to use if further\n",
+      "            customisation is necessary.\n",
       "    \n",
       "    **Examples**\n",
       "    \n",
@@ -692,12 +777,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:19.135556300Z",
-     "start_time": "2024-01-12T10:52:19.123032600Z"
+     "end_time": "2024-01-16T08:17:02.346960Z",
+     "start_time": "2024-01-16T08:17:02.333276400Z"
     }
    },
    "id": "92017d4e554a0ed5",
-   "execution_count": 13
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -717,12 +802,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:19.376748200Z",
-     "start_time": "2024-01-12T10:52:19.137617800Z"
+     "end_time": "2024-01-16T08:17:02.580048500Z",
+     "start_time": "2024-01-16T08:17:02.349088Z"
     }
    },
    "id": "6c878c8ed1b0e2cb",
-   "execution_count": 14
+   "execution_count": 16
   },
   {
    "cell_type": "code",
@@ -742,12 +827,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:19.517708600Z",
-     "start_time": "2024-01-12T10:52:19.378804200Z"
+     "end_time": "2024-01-16T08:17:02.718855900Z",
+     "start_time": "2024-01-16T08:17:02.582654100Z"
     }
    },
    "id": "de57465ccaa6f25c",
-   "execution_count": 15
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -827,12 +912,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:19.574441400Z",
-     "start_time": "2024-01-12T10:52:19.518777100Z"
+     "end_time": "2024-01-16T08:17:02.770295Z",
+     "start_time": "2024-01-16T08:17:02.722490900Z"
     }
    },
    "id": "284249bcc80a9fe",
-   "execution_count": 16
+   "execution_count": 18
   },
   {
    "cell_type": "code",
@@ -841,7 +926,7 @@
      "data": {
       "text/plain": "array(0.74435109)"
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,12 +937,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:19.574441400Z",
-     "start_time": "2024-01-12T10:52:19.533599900Z"
+     "end_time": "2024-01-16T08:17:02.770295Z",
+     "start_time": "2024-01-16T08:17:02.734890900Z"
     }
    },
    "id": "d85fc46f71dd5258",
-   "execution_count": 17
+   "execution_count": 19
   },
   {
    "cell_type": "code",
@@ -866,7 +951,7 @@
      "data": {
       "text/plain": "array(-260.02471301)"
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,12 +962,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-12T10:52:19.594299300Z",
-     "start_time": "2024-01-12T10:52:19.550286900Z"
+     "end_time": "2024-01-16T08:17:02.791206600Z",
+     "start_time": "2024-01-16T08:17:02.750464300Z"
     }
    },
    "id": "cb0ee2feac372351",
-   "execution_count": 18
+   "execution_count": 20
   }
  ],
  "metadata": {
